==> comfi41/LOW-POWER-DASHBOARD/main/epd.c <==
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/uart.h"
#include "epd.h"
#define BUF_SIZE 1024

void epd_init(void)
{
	uart_config_t uart_config = {
        .baud_rate = 115200,
        .data_bits = UART_DATA_8_BITS,
        .parity    = UART_PARITY_DISABLE,
        .stop_bits = UART_STOP_BITS_1,
        .flow_ctrl = UART_HW_FLOWCTRL_DISABLE
    };
    uart_param_config(UART_NUM_0, &uart_config);
    uart_driver_install(UART_NUM_0, BUF_SIZE * 2, 0, 0, NULL, 0);

	EINK_WAKE_OFF();
	EINK_RESET_OFF();
}

void epd_wakeup(void)
{
	EINK_WAKE_OFF();
	//EINK_RESET_OFF();
	vTaskDelay(10 / portTICK_PERIOD_MS);
	EINK_WAKE_ON();
	//EINK_RESET_ON();
	vTaskDelay(10 / portTICK_PERIOD_MS);
	EINK_WAKE_OFF();
	//EINK_RESET_OFF();
	vTaskDelay(10 / portTICK_PERIOD_MS);
}

static void _putchars(const unsigned char * ptr, int n)
{
	uart_write_bytes(UART_NUM_0, (const char *) ptr, n);
	
}
