==> SCU-Maker/Makers-/电子墨水屏/4_3inch-ePaper-示例程序/4_3inch-ePaper-demo/Open103Z/User/epd.c <==
#include "epd.h"

static void _putchars(const unsigned char * ptr, int n)
{
	int i;
	
	for(i = 0; i < n; i++)
	{
		USART_SendData(USART1, (unsigned char)ptr[i]); 
		while (USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET) 
			;
	}
}

void epd_init(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;
	
	RCC_APB2PeriphClockCmd(RCC_GPIO_USE, ENABLE); 

	GPIO_InitStructure.GPIO_Pin = EPD_PORTA_PIN_OUT; 
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);	
	
	GPIO_ResetBits(EPD_WAKEUP_PORT, EPD_WAKEUP_PIN);   
  GPIO_ResetBits(EPD_RESET_PORT, EPD_RESET_PIN);	
}

void epd_wakeup(void)
{
	GPIO_ResetBits(EPD_WAKEUP_PORT, EPD_WAKEUP_PIN); 
	
	_delay();
	_delay();
	
	GPIO_SetBits(EPD_WAKEUP_PORT, EPD_WAKEUP_PIN);
	
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	_delay();
	
  GPIO_ResetBits(EPD_WAKEUP_PORT, EPD_WAKEUP_PIN); 

	CM3_SysTickDelayMS(10);                                                       //唤醒后强制延时 10ms	
}
